# MacScreenSaver

./: CMakeLists.txt  main.cpp
shaders/: fullscreen.frag  fullscreen.vert
